# me

./: .commitlintrc.yml  .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.js  docker-compose.yml  index.html
.husky/hooks/: pre-commit
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: blog.rs  hello_world.rs  mod.rs
content/: my-first-post.md
html/: build-posts.js  discord.txt  index.html  package.json  source.css  vercel.json
html/lib/: marked.min.js
me/: Cargo.toml  build.sh  index.html  me.css  vercel.json
me/src/: app.rs  main.rs
me/src/constants/: apiurl.rs  mod.rs
me/src/routes/: app.rs  blog.rs  mod.rs  post.rs
website/: README.md  package.json
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/music/: +page.svelte
