[package]
name = "myferr-foo-ng"
version = "0.1.0"
edition = "2024"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/myferr.foo.ng"
license = "MIT"

[dependencies]
yew = { version="0.21", features=["csr"] }

[dev-dependencies]
husky-rs = "0.1.5"
