[package]
name = "myferr-foo-ng"
version = "0.1.0"
edition = "2024"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/myferr.foo.ng"
license = "MIT"

[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18"
gloo-net = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
gloo-utils = "0.2.0"

[dev-dependencies]
husky-rs = "0.1.5"
